--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --minify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
